# cadence

./: .gitignore  LICENSE.txt  README.md  README_fr.md  pyproject.toml
cadence/: __init__.py
cadence/api/: config.py  constants.py  functions.py  track.py  utils.py
cadence/cli/: cli.py
cadence/ui/: callbacks.py  check_tkinter.py  layout.py  run.py  state.py  ui_constants.py  utils.py
sequences/: seq1.py
sequences/seq1.cadence/: project.json
sequences/seq2.cadence/: project.json
sequences/seq3.cadence/: project.json
sounds/: README.md
